# git-sidequest

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  default.nix  dist-workspace.toml  flake.nix  justfile  renovate.json  rust-toolchain.toml  shell.nix  test.sh
.github/workflows/: nix-build.yml  release.yml
src/: app.rs  constants.rs  lib.rs  main.rs  utils.rs
src/secondary_ports/: icheck_initial_state.rs  mod.rs
src/usecases/: initial_state_checker.rs  mod.rs
tests/: tests.sh
