[package]
name = "git-sidequest"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/AdrienCos/git-sidequest"
license = "MIT"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
git2 = "0.19.0"
# Avoid dynamically linking OpenSSL, increasing compatibilty at the cost of
# build duration and binary size
openssl = { version = "*", features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
