[package]
name = "git-sidequest"
version = "0.6.1"
edition = "2021"
repository = "https://github.com/AdrienCos/git-sidequest"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
git2 = { version = "0.20.0", default-features = false }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
